crates/plotnik-tests/tests/04-emit/bytecode/anchors/array_exact_first_child_impossible.txt
Q = (array .! (identifier))
------------------ DIAGNOSTICS -------------------
error: with the exact anchor (`.!`), the first child of `array` must be `identifier`, but `array` begins with `"["`
 --> query.ptk:1:6
  |
1 | Q = (array .! (identifier))
  |      ^^^^^
  |
help: `.!` allows no syntax-tree node in its gap — not even an anonymous token or comment; the soft anchor `.` skips those: `(array . (identifier))`
